3d view rendered mode crashes on new scene #41221

Closed
opened 2014-07-28 11:54:40 +02:00 by Brendon Murphy · 5 comments
Member

System Information
win 7 64 ATI Radeon HD 5650

Blender Version
Broken: 5cab282
Worked: (optional)

Short description of error
3d view rendered mode crashes on new scene

Exact steps for others to reproduce the error
From the default start screen, turn on 3d Viewport Rendered Shading.
From the Header add a new scene = crash blender.

From the default start screen, split the 3d view to two windows.
Turn on 3d Viewport Rendered Shading in one window.
Press 'S' key to scale the cube in rendered mode to see instant up date in the "Solid view window" & large lag (unusable) in the 3d viewport.Rendered window.

**System Information** win 7 64 ATI Radeon HD 5650 **Blender Version** Broken: 5cab282 Worked: (optional) **Short description of error** 3d view rendered mode crashes on new scene **Exact steps for others to reproduce the error** From the default start screen, turn on 3d Viewport Rendered Shading. From the Header add a new scene = crash blender. From the default start screen, split the 3d view to two windows. Turn on 3d Viewport Rendered Shading in one window. Press 'S' key to scale the cube in rendered mode to see instant up date in the "Solid view window" & large lag (unusable) in the 3d viewport.Rendered window.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BrendonMurphy

Added subscriber: @BrendonMurphy

This issue was referenced by ff37a1d7fc

This issue was referenced by ff37a1d7fc47b41b3c144d1a2fcf5d1107ea0b39

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ff37a1d7fc.

Closed by commit ff37a1d7fc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41221
No description provided.