Fix T41221: 3d view rendered mode crashes on new scene